force-app/main/default/objects/Contact/fields/ActiveCamp__Active_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Active_Campaign_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ActiveCampaign Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>