force-app/main/default/objects/Contact/fields/Birth_Date_Number__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_Number__c</fullName>
    <formula>DAY (Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Date Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>