force-app/main/default/objects/Contact/fields/Birthday_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Co_Borrower__c</fullName>
    <label>Birthday (Co Borrower)</label>
    <type>Date</type>
</CustomField>