force-app/main/default/objects/Contact/fields/Birthday_Emails__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthday Emails</label>
    <type>Checkbox</type>
</CustomField>