force-app/main/default/objects/Contact/fields/Birthday_Emails_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Emails_Co_Borrower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthday Emails (Co Borrower)</label>
    <type>Checkbox</type>
</CustomField>