force-app/main/default/objects/Contact/fields/Borrower_Has_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Has_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Borrower Has Spouse</label>
    <type>Checkbox</type>
</CustomField>