force-app/main/default/objects/Contact/fields/Borrower_Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Spouse_Name__c</fullName>
    <label>Borrower Spouse Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>