force-app/main/default/objects/Contact/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Contact</label>
    <type>Checkbox</type>
</CustomField>