force-app/main/default/objects/Contact/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>