force-app/main/default/objects/Contact/fields/Co_Borrower_Has_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Has_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-Borrower Has Spouse</label>
    <type>Checkbox</type>
</CustomField>