force-app/main/default/objects/Contact/fields/Co_Borrower_Spouse_Email__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Spouse_Email__c</fullName>
    <label>Co-Borrower Spouse Email</label>
    <type>Email</type>
</CustomField>