force-app/main/default/objects/Contact/fields/Co_Borrower_Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Spouse_Name__c</fullName>
    <label>Co-Borrower Spouse Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>