force-app/main/default/objects/Contact/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <label>Contacted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>