force-app/main/default/objects/Contact/fields/Conventional__c.field-meta.xml
<CustomField>
    <fullName>Conventional__c</fullName>
    <label>Conventional</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>