force-app/main/default/objects/Contact/fields/Email_2_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Email_2_Co_Borrower__c</fullName>
    <label>Email 2 (Co Borrower)</label>
    <type>Email</type>
</CustomField>