force-app/main/default/objects/Contact/fields/Email_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Email_Co_Borrower__c</fullName>
    <label>Email (Co Borrower)</label>
    <type>Email</type>
</CustomField>