force-app/main/default/objects/Contact/fields/FHA_VA__c.field-meta.xml
<CustomField>
    <fullName>FHA_VA__c</fullName>
    <label>FHA/VA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>