force-app/main/default/objects/Contact/fields/First_Name_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Co_Borrower__c</fullName>
    <label>First Name (Co Borrower)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>