force-app/main/default/objects/Contact/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <label>General Notes</label>
    <type>TextArea</type>
</CustomField>