force-app/main/default/objects/Contact/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Loan Rep</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
            <value>
                <fullName>Title Agent</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>6/29/17 FB Event</fullName>
                <isActive>false</isActive>
                <label>6/29/17 FB Event</label>
            </value>
            <value>
                <fullName>Builder</fullName>
                <isActive>false</isActive>
                <label>Builder</label>
            </value>
            <value>
                <fullName>Buyer Agent Transaction Coordinator</fullName>
                <isActive>false</isActive>
                <label>Buyer Agent Transaction Coordinator</label>
            </value>
            <value>
                <fullName>CPA</fullName>
                <isActive>false</isActive>
                <label>CPA</label>
            </value>
            <value>
                <fullName>Contractor</fullName>
                <isActive>false</isActive>
                <label>Contractor</label>
            </value>
            <value>
                <fullName>Developer</fullName>
                <isActive>false</isActive>
                <label>Developer</label>
            </value>
            <value>
                <fullName>Doctor</fullName>
                <isActive>false</isActive>
                <label>Doctor</label>
            </value>
            <value>
                <fullName>Escrow Agent</fullName>
                <isActive>false</isActive>
                <label>Escrow Agent</label>
            </value>
            <value>
                <fullName>HOA</fullName>
                <isActive>false</isActive>
                <label>HOA</label>
            </value>
            <value>
                <fullName>Impact Summit 1</fullName>
                <isActive>false</isActive>
                <label>Impact Summit 1</label>
            </value>
            <value>
                <fullName>Inspector</fullName>
                <isActive>false</isActive>
                <label>Inspector</label>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
                <isActive>false</isActive>
                <label>Insurance Agent</label>
            </value>
            <value>
                <fullName>Mortgage Contact</fullName>
                <isActive>false</isActive>
                <label>Mortgage Contact</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Realtor Prospect</fullName>
                <isActive>false</isActive>
                <label>Realtor Prospect</label>
            </value>
            <value>
                <fullName>Underwriter</fullName>
                <isActive>false</isActive>
                <label>Underwriter</label>
            </value>
            <value>
                <fullName>Vendor</fullName>
                <isActive>false</isActive>
                <label>Vendor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>