force-app/main/default/objects/Contact/fields/Has_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Has_Co_Borrower__c</fullName>
    <label>Has Co Borrower</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>