force-app/main/default/objects/Contact/fields/Has_Foreclosure__c.field-meta.xml
<CustomField>
    <fullName>Has_Foreclosure__c</fullName>
    <label>Has Foreclosure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>