force-app/main/default/objects/Contact/fields/Is_Realtor__c.field-meta.xml
<CustomField>
    <fullName>Is_Realtor__c</fullName>
    <formula>OR(
    AND(
        NOT(ISBLANK(AccountId)),
        Account.Is_Realtor__c = TRUE
    ),
    AND(
        NOT(ISBLANK(AccountId)),
        INCLUDES(Account.Group__pc, &apos;Realtor&apos;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Realtor</label>
    <type>Checkbox</type>
</CustomField>