force-app/main/default/objects/Contact/fields/Last_Name_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Co_Borrower__c</fullName>
    <label>Last Name (Co Borrower)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>