force-app/main/default/objects/Contact/fields/Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch__c</fullName>
    <label>Last Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>