force-app/main/default/objects/Contact/fields/LO_Status__c.field-meta.xml
<CustomField>
    <fullName>LO_Status__c</fullName>
    <label>LO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attempt 1</fullName>
            </value>
            <value>
                <fullName>Attempt 2</fullName>
            </value>
            <value>
                <fullName>Attempt 3</fullName>
            </value>
            <value>
                <fullName>Attempt 4</fullName>
            </value>
            <value>
                <fullName>Attempt 5</fullName>
            </value>
            <value>
                <fullName>Attempt 6</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Good Contact</fullName>
            </value>
            <value>
                <fullName>Hot Nurture</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>