force-app/main/default/objects/Contact/fields/Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer__c</fullName>
    <label>Loan Officer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>