force-app/main/default/objects/Contact/fields/MailChimp_Subscriber_Old_ID__c.field-meta.xml
<CustomField>
    <fullName>MailChimp_Subscriber_Old_ID__c</fullName>
    <label>MailChimp Subscriber Old ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>