force-app/main/default/objects/Contact/fields/Mobile_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Co_Borrower__c</fullName>
    <label>Mobile (Co Borrower)</label>
    <type>Phone</type>
</CustomField>