force-app/main/default/objects/Contact/fields/Monthly_Debts_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Debts_Borrower__c</fullName>
    <label>Monthly Debts (Borrower)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>