force-app/main/default/objects/Contact/fields/Next_Birthday_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthday_Date__c</fullName>
    <label>Next Birthday Date</label>
    <type>Date</type>
</CustomField>