force-app/main/default/objects/Contact/fields/Next_Birthday_Date_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthday_Date_Co_Borrower__c</fullName>
    <label>Next Birthday Date (Co Borrower)</label>
    <type>Date</type>
</CustomField>