force-app/main/default/objects/Contact/fields/NMLS__c.field-meta.xml
<CustomField>
    <fullName>NMLS__c</fullName>
    <label>NMLS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>