force-app/main/default/objects/Contact/fields/Other_Phone_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_Co_Borrower__c</fullName>
    <label>Other Phone (Co Borrower)</label>
    <type>Phone</type>
</CustomField>