force-app/main/default/objects/Contact/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <label>Purchase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>