force-app/main/default/objects/Contact/fields/SMS_Birth_date_Field__c.field-meta.xml
<CustomField>
    <fullName>SMS_Birth_date_Field__c</fullName>
    <formula>DATE(YEAR( TODAY()),MONTH(Birthdate),DAY(Birthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Birth date Field</label>
    <type>Date</type>
</CustomField>