force-app/main/default/objects/Contact/fields/SMS_Closing_date__c.field-meta.xml
<CustomField>
    <fullName>SMS_Closing_date__c</fullName>
    <formula>DATE( YEAR( TODAY() ) , MONTH( Closing_Date__c ) , DAY( Closing_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Closing date</label>
    <type>Date</type>
</CustomField>