force-app/main/default/objects/Contact/fields/SSN_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>SSN_Co_Borrower__c</fullName>
    <label>SSN (Co Borrower)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>