force-app/main/default/objects/Contact/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contacted - Call Back Required</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Hot Nurture</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Bad Lead</fullName>
            </value>
            <value>
                <fullName>Needs List Sent</fullName>
            </value>
            <value>
                <fullName>Disclosures Received</fullName>
            </value>
            <value>
                <fullName>Pre-approved</fullName>
            </value>
            <value>
                <fullName>Credit impaired</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Closed Client</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>