force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Call Back</fullName>
            </value>
            <value>
                <fullName>Contact Call Back 1</fullName>
            </value>
            <value>
                <fullName>Contact Call Back 2</fullName>
            </value>
            <value>
                <fullName>Contact Call Back 3</fullName>
            </value>
            <value>
                <fullName>Contact Call Back 4</fullName>
            </value>
            <value>
                <fullName>Contact Call Back 5</fullName>
            </value>
            <value>
                <fullName>Contact Call Back 6</fullName>
            </value>
            <value>
                <fullName>Scheduling Meeting</fullName>
            </value>
            <value>
                <fullName>Meeting Set</fullName>
            </value>
            <value>
                <fullName>Meeting Complete</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Nurture - Meeting Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>