force-app/main/default/objects/Contact/fields/Unique_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Contact_ID__c</fullName>
    <label>Unique Contact  ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>