force-app/main/default/objects/Contact/fields/Units_last_3_months__c.field-meta.xml
<CustomField>
    <fullName>Units_last_3_months__c</fullName>
    <label>Units last 3 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>