force-app/main/default/objects/Contact/fields/Work_Phone_Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_Co_Borrower__c</fullName>
    <label>Work Phone (Co Borrower)</label>
    <type>Phone</type>
</CustomField>