force-app/main/default/objects/Contact/fields/Years_with_current_Company__c.field-meta.xml
<CustomField>
    <fullName>Years_with_current_Company__c</fullName>
    <label>Years with current Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>