force-app/main/default/objects/Contact/validationRules/No_Owner_Change_on_Contacts.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Owner_Change_on_Contacts</fullName>
    <active>true</active>
    <description>This rule will return an error is a user with the profile of Loan Officer tries to change record ownership on a contact.</description>
    <errorConditionFormula>ISCHANGED( OwnerId ) &amp;&amp;  $User.ProfileId  = &quot;00ef2000001wwBC&quot;  &amp;&amp;  $User.Id  &lt;&gt; &quot;005f2000009NwSs&quot;</errorConditionFormula>
    <errorMessage>You do not have permission to change record ownership for this record.</errorMessage>
</ValidationRule>