force-app/main/default/objects/Contact/listViews/Birthdays_Next_Week.listView-meta.xml
<ListView>
    <fullName>Birthdays_Next_Week</fullName>
    <columns>Closing_Date__c</columns>
    <columns>Loan_Officer__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE4</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Birth_Date_Number__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.BIRTHDATE</field>
        <operation>equals</operation>
        <value>NEXT_WEEK</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed Client</value>
    </filters>
    <label>Birthdays Next Week</label>
    <sharedTo>
        <group>Opener</group>
    </sharedTo>
</ListView>